# vk_video_samples

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  BUILD.md  CMakeLists.txt  Dockerfile  README-AQ.md  README.md  ubuntu-update-dependencies.sh  update_external_sources.bat  update_external_sources.sh
common/libs/tests/: CMakeLists.txt  README.md
vk_video_decoder/: .gitignore  BUILD.md  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  build_windows_targets.bat  ffplay-present-yuv.sh  ubuntu-update-dependencies.sh  update_external_sources.bat  update_external_sources.sh
vk_video_decoder/demos/: CMakeLists.txt
vk_video_decoder/demos/vk-video-dec/: CMakeLists.txt  Main.cpp  generate-dispatch-table.py  glsl-to-spirv
vk_video_decoder/external_revisions/: glslang_revision  gstvkvideoparser_giturl  gstvkvideoparser_revision  libyuv_giturl  libyuv_revision  shaderc_giturl  shaderc_revision
vk_video_decoder/fluster_ref/: av1.csv  avc.csv  hevc.csv
vk_video_decoder/include/: vulkan_interfaces.h  vulkan_video_decoder.h
vk_video_decoder/include/NvVideoParser/: nvVulkanVideoParser.h  nvVulkanVideoUtils.h
vk_video_decoder/include/vk_video/: vulkan_video_codec_h265std_decode.h
vk_video_decoder/include/vkvideo_parser/: PictureBufferBase.h  StdVideoPictureParametersSet.h  VkParserVideoRefCountBase.h  VulkanBitstreamBuffer.h  VulkanVideoParser.h  VulkanVideoParserIf.h  VulkanVideoParserParams.h
vk_video_decoder/include/vulkan/: vulkan_beta.h  vulkan_core.h
vk_video_decoder/libs/: CMakeLists.txt
vk_video_decoder/libs/NvCodecUtils/: ElementaryStream.cpp  FFmpegDemuxer.cpp  FFmpegDemuxer.h  GstDemuxer.h  Logger.cpp  Logger.h  VideoStreamDemuxer.cpp  VideoStreamDemuxer.h
vk_video_decoder/libs/NvVideoParser/: CMakeLists.txt
vk_video_decoder/libs/NvVkDecoder/: NvVkDecoder.cpp  NvVkDecoder.h  VkParserVideoPictureParameters.h
vk_video_decoder/libs/VkCodecUtils/: FrameProcessor.h  FrameProcessorFactory.h  Helpers.h  NvVideoProfile.h  NvVideoSession.cpp  NvVideoSession.h  ProgramConfig.h  VkBufferResource.h  VkImageResource.cpp  VkImageResource.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanDeviceMemoryHostAccess.h  VulkanDeviceMemoryImpl.cpp  VulkanDeviceMemoryImpl.h  VulkanFrame.cpp  VulkanFrame.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h  VulkanVideoProcessor.cpp  VulkanVideoProcessor.h  VulkanVideoReferenceCountedPool.h  VulkanVideoRender.cpp  VulkanVideoRender.h  VulkanVideoSession.cpp  VulkanVideoSession.h  VulkanVideoUtils.cpp  VulkanVideoUtils.h  nvVideoProfile.h  nvVkFormats.cpp  pattern.cpp  pattern.h  vulkan_video_codecs_test_offsets.cpp
vk_video_decoder/libs/VkDecoderUtils/: ElementaryStream.cpp  FFmpegDemuxer.cpp  VideoStreamDemuxer.cpp  VideoStreamDemuxer.h
vk_video_decoder/libs/VkShell/: FrameProcessor.cpp  FrameProcessor.h  FrameProcessorFactory.h  Main.cpp  Shell.cpp  Shell.h  ShellDirect.cpp  ShellDirect.h  ShellWayland.cpp  ShellWayland.h  ShellWin32.cpp  ShellWin32.h  ShellXcb.cpp  ShellXcb.h
vk_video_decoder/libs/VkVideoDecoder/: VkParserVideoPictureParameters.cpp  VkParserVideoPictureParameters.h  VkVideoDecoder.cpp  VkVideoDecoder.h  VulkanBistreamBufferImpl.cpp  VulkanBistreamBufferImpl.h
vk_video_decoder/libs/VkVideoParser/: VulkanVideoParser.cpp
vk_video_decoder/libs/VulkanVideoFrameBuffer/: VulkanVideoFrameBuffer.cpp  VulkanVideoFrameBuffer.h
vk_video_decoder/libs/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
vk_video_decoder/scripts/: determine_vs_version.py  helper_file_generator.py  lvl_genvk.py  mock_icd_generator.py  object_tracker_generator.py  parameter_validation_generator.py  run_fluster_test.sh  threading_generator.py  unique_objects_generator.py  vk.xml  vk_validation_stats.py
vk_video_decoder/src/: vulkan_video_decoder.cpp
vk_video_decoder/test/vulkan-video-dec/: CMakeLists.txt  Main.cpp
vk_video_decoder/test/vulkan-video-simple-dec/: CMakeLists.txt  Main.cpp
vk_video_encoder/: BUILD.md  CMakeLists.txt  NvEncodeApp.cpp  NvEncodeApp.h  main.cpp
vk_video_encoder/VkCodecUtils/: NvPictureBuffer.cpp  NvPictureBuffer.h  NvVideoProfile.h  NvVideoSession.cpp  NvVideoSession.h
vk_video_encoder/demos/: CMakeLists.txt
vk_video_encoder/demos/vk-video-enc/: CMakeLists.txt  Main.cpp
vk_video_encoder/docs/: ENCODER_CONFIG_JSON_REPORT.md  GOP_STRUCTURE_ADD_ON_FIX.md
vk_video_encoder/include/: vulkan_video_encoder.h  vulkan_video_encoder_ext.h
vk_video_encoder/json_config/: encoder_config.default.json  encoder_config.example.json  encoder_config.schema.json  encoder_config_defaults.md
vk_video_encoder/json_config/nvidia/: PreferredSettings_extracted.md  README.md  high_quality_p1.json  high_quality_p2.json  high_quality_p3.json  high_quality_p4.json  high_quality_p5.json  high_quality_p6.json  high_quality_p7.json  lossless.json  low_latency_p1.json  low_latency_p2.json  low_latency_p3.json  preset_review_report.md  ultra_low_latency_p1.json
vk_video_encoder/libs/: CMakeLists.txt
vk_video_encoder/libs/VkVideoEncoder/: VkEncoderConfig.cpp  VkEncoderConfig.h  VkEncoderConfigAV1.cpp  VkEncoderConfigAV1.h  VkEncoderConfigH264.cpp  VkEncoderConfigH264.h  VkEncoderConfigH265.cpp  VkEncoderConfigH265.h  VkEncoderDpbAV1.cpp  VkEncoderDpbAV1.h  VkEncoderDpbH264.cpp  VkEncoderDpbH264.h  VkEncoderDpbH265.cpp  VkEncoderDpbH265.h  VkEncoderH264.h  VkEncoderPictureBuffer.cpp  VkEncoderPictureBuffer.h  VkVideoEncoder.cpp  VkVideoEncoder.h  VkVideoEncoderAV1.cpp  VkVideoEncoderAV1.h  VkVideoEncoderDef.h  VkVideoEncoderH264.cpp  VkVideoEncoderH264.h  VkVideoEncoderH265.cpp  VkVideoEncoderH265.h  VkVideoEncoderPsnr.cpp  VkVideoEncoderPsnr.h  VkVideoEncoderStateAV1.h  VkVideoEncoderStateH264.h  VkVideoGopStructure.h  (+4 more)
vk_video_encoder/src/: vulkan_video_encoder.cpp  vulkan_video_encoder_ext.cpp
vk_video_encoder/test/: av1_encoder_quality_test.py  gop_structure_test.cpp
(+471 files in other folders)
